k8s/base/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: ai-memory
  namespace: ai-memory-app
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: "100.96.0.5,100.96.0.14,100.96.0.23,100.96.0.20,100.96.0.6,100.96.0.2,100.96.0.17"
spec:
  virtualhost:
    fqdn: ai-memory.glauciolabs.work
  routes:
    - conditions:
        - prefix: /
      services:
        - name: ai-memory
          port: 49374
